--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.jar=${dist.dir}/ladderIdeVgs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.2.jar=Json\\gson-2.8.2.jar
+file.reference.json-20200518.jar=Json\\json-20200518.jar
+file.reference.json-simple-1.1.jar=Json\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -36,7 +39,10 @@ javac.classpath=\
     ${libs.JSON.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.JSONParser.classpath}:\
-    ${libs.GSON.classpath}
+    ${libs.GSON.classpath}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.json-20200518.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
